# MP3Player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  lv_conf.h  lvgl_driver.c  main.c  st7789.c  st7789.h
